fixed people modal overflowing when scrollbars show

--- a/public/js/views/people/people-modal.less
+++ b/public/js/views/people/people-modal.less
@@ -32,17 +32,20 @@
 }
 
 .people-modal__results {
-  margin: 0;
+  margin: 0 0 0 -1em;
   overflow: auto;
   height: 390px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .people-modal-result {
   display: inline-block;
   list-style: none;
-  margin-right: 1em;
-  height: 64px;
-  width: 245px;
+  margin: 0 0 1em 1em;
+  height: 48px;
+  width: 200px;
+  flex-grow: 1;
 }
 
 .people-modal-result h4 {
